tests/NormalTests/paczka1/small_fuzzy/18729938.err
Error in line 6: hTH2590clAH A468 32,0
Error in line 12: hTH2590clAH A831 68,5
